Change packaging and add unit test
